Fixed menu hiding behind musikplayer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -351,6 +351,7 @@ header #main-nav li ul {
    	margin: 0px;
    	border:1px solid black;
 	border-radius: 0 10px 10px 10px;
+    z-index:10;
 }
 
 header #main-nav li {
